------------------------------------------------------------------------
r1302 | dahnke | 2018-04-10 12:34:30

Changed paths:
M       CHANGES.txt
M       cat_io_writenii.m
M       cat_main.m
M       cat_main_LAS.m
M       cat_run_job.m
M       cat_run_job1070.m
M       cat_surf_createCS.m
M       cat_vol_morph.m
M       cat_vol_resize.m
A       internal/old
M       tbx_cfg_cat.m

(1) Changed:  Added optimizations in cat_vol_morph to improve 
              processing speed.
(2) Changed:  Removed old code in cat_run_joband cat_run_job1070 and
              removed the lower intensity limitation that may troubles  
              the CSF/background segmentation.
(3) Fixed:    Corrected data mapping error in cat_vol_ROInorm.
(4) Fixed:    Corrected output error of iY*.nii in cat_main.
(5) Fixed:    Corrected output error of atlas maps in cat_main.
(6) Fixed:    Corrected small bug in cat_vol_resize.
(7) Fixed:    Corrected problems with the main resolution limit  
              of some preprocessing steps in cat_main and cat_main_LAS. 
(8) New:      Added atlas export field in expert GUI.
              
------------------------------------------------------------------------
r1301 | gaser | 2018-04-09 16:05:37 +0200 (Mo, 09 Apr 2018) | 27 lines

Changed paths:
M       CAT12-Manual.docx
M       CAT12-Manual.pdf
M       CHANGES.txt
M       Contents.m
M       cat12.m
A       cat_install_tfce.m
M       cat_stat_analyze_ROIs.m
M       cat_surf_createCS.m
M       cat_surf_display.m
M       cat_update.m
M       html/cat.html
M       html/cat_starting.html
M       html/cat_versions.html
M       tbx_cfg_cat.m

(1) Changed: Disabled volume-based thickness estimation option.
(2) Fixed: Display of surfaces without color (texture) information was not 
    working in cat_surf_display.m.
(3) Changed: Added estimation of pial and white matter surface and use these
    surfaces to correct cortical thickness.    
(4) Changed: Added internal option to save beta images in 